feat(功能): 增加基于 YuanBao API 的搜索功能
- 在 README 和 config 文件中添加了 YuanBao API 的相关信息
- 实现了 YuanBaoClient 类以调用 YuanBao API
- 在视频生成服务中集成了 YuanBao 搜索功能
- 更新了 Web 界面，支持使用 YuanBao 进行搜索和任务创建

--- a/config-template.toml
+++ b/config-template.toml
@@ -4,6 +4,16 @@ base_url = "https://api.deepseek.com"
 model = "deepseek-chat"
 source = "crosstalk"
 
+[yuanbao]
+base_url = "http://localhost:8082/v1/"
+api_key = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+model = "deepseek-r1-search"
+
+hy_user = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+agent_id = "naQivTmsDa"
+chat_id = ""
+should_remove_conversation = false
+
 [tts]
 source = "dashscope"
 
