feat(tts): 添加 Qwen 语音合成服务
- 新增 QwenTextToSpeechConverter 类实现 Qwen 语音合成服务
- 在 TTSConfig 和 __init__.py 中添加 Qwen 相关配置和导入
- 修改 VideoGenerator 类以支持 Qwen 语音合成
- 更新 README 和配置模板，增加 Qwen 服务说明和配置示例

--- a/config-template.toml
+++ b/config-template.toml
@@ -23,6 +23,12 @@ model = "cosyvoice-v1"
 voices = ["longwan", "longcheng"]
 speed = 1.1
 
+[tts.qwen]
+api_key = "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+model = "qwen-tts-latest"
+voices = ["Cherry", "Ethan"]
+speed = 1.1
+
 [tts.edge]
 voices = ["zh-CN-XiaoyiNeural", "zh-CN-YunyangNeural"]
 speed = 1.1
