--- a/config-template.toml
+++ b/config-template.toml
@@ -15,9 +15,9 @@ chat_id = ""
 should_remove_conversation = false
 
 [tts]
-source = "dashscope"
+source = "cosyvoice"
 
-[tts.dashscope]
+[tts.cosyvoice]
 api_key = "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 model = "cosyvoice-v1"
 voices = ["longwan", "longcheng"]
@@ -27,26 +27,6 @@ speed = 1.1
 api_key = "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 model = "qwen-tts-latest"
 voices = ["Cherry", "Ethan"]
-speed = 1.1
-
-[tts.edge]
-voices = ["zh-CN-XiaoyiNeural", "zh-CN-YunyangNeural"]
-speed = 1.1
-
-[tts.hailuo]
-api_key = "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-base_url = "http://127.0.0.1:8000/v1"
-voices = ["Podcast_girl", "male-botong"]
-speed = 1.1
-
-[tts.kokoro]
-model = "./models/kokoro/kokoro-v1_1-zh.pth"
-voices = [
-    "./models/kokoro/voices/zf_xiaoyi.pt",
-    "./models/kokoro/voices/zm_yunxi.pt",
-]
-config = "./models/kokoro/config.json"
-lang_code = "z"
 speed = 1.1
 
 [video]
@@ -93,12 +73,12 @@ prompt = """### 角色：批量视频搜索词生成器
 
 #### 约束条件：
 1. **每个 `content` 字段** 必须生成 5 个相关的搜索词。
-2. 输出必须是一个 JSON 数组，其中每个条目包含 `id` 和对应的 `search_terms` 数组。
+2. 输出必须是一个 JSON 对象，其中包含 `count` 和 `dialogues` 字段。
 3. 每个搜索词应由 **1-3 个英文单词** 组成，且必须与视频内容的主题或情节密切相关。
 4. **`search_terms` 数组的长度必须为 5**，即每个对话段落都必须生成 5 个相关的搜索词。
 5. 搜索词应简洁且贴合对话内容，能够有效地捕捉视频的核心主题或情节。
-6. 必须全部使用英文生成搜索词，不允许使用中文。
-7. 不返回原始对话内容，仅返回每个 `id` 和生成的 5 个搜索词。
+6. 所有搜索词必须是英文，不允许使用中文。
+7. 不返回原始对话内容，仅返回每个 `id` 和对应的 5 个搜索词。
 
 #### 输入格式：
 ```json
@@ -110,23 +90,22 @@ prompt = """### 角色：批量视频搜索词生成器
   {
     "id": 2,
     "content": "台词内容2"
-  },
-  ...
+  }
 ]
 ```
 
 #### 输出格式：
 ```json
 {
-  "count": 2,
+  "count": 2,  // 表示处理的对话段落总数
   "dialogues": [
     {
       "id": 1,
-      "search_terms": ["search term 1", "search term 2", "search term 3", "search term 4", "search term 5"]
+      "search_terms": ["term 1", "term 2", "term 3", "term 4", "term 5"]
     },
     {
       "id": 2,
-      "search_terms": ["search term 1", "search term 2", "search term 3", "search term 4", "search term 5"]
+      "search_terms": ["term 1", "term 2", "term 3", "term 4", "term 5"]
     }
   ]
 }
